# sm4sh_lib

./: .gitignore  Cargo.toml  README.md
sm4sh_lib/: Cargo.toml
sm4sh_lib/src/: gx2.rs  jtb.rs  lib.rs  mta.rs  nhb.rs  nsh.rs  nud.rs  nut.rs  omo.rs  pack.rs  sb.rs  vbn.rs
sm4sh_model/: Cargo.toml
sm4sh_model/fuzz/: Cargo.toml
sm4sh_model/fuzz/fuzz_targets/: nud_model_from_nud.rs  nud_model_to_nud.rs
sm4sh_model/src/: animation.rs  database.rs  lib.rs  model.rs  nud.rs  shader_database.rs  skinning.rs  texture.rs  vertex.rs
sm4sh_model/src/database/: io.rs  uniforms.rs
sm4sh_model/src/nud/: vertex.rs
sm4sh_shader/: Cargo.toml  README.md
sm4sh_shader/src/: annotation.rs  database.rs  gfx2.rs  main.rs
sm4sh_shader/src/database/: query.rs
sm4sh_test/: Cargo.toml
sm4sh_test/src/: main.rs
sm4sh_viewer/: Cargo.toml
sm4sh_viewer/src/: main.rs
sm4sh_wgpu/: Cargo.toml  build.rs
sm4sh_wgpu/src/: lib.rs  material.rs  model.rs  pipeline.rs  renderer.rs  shader.rs  shadergen.rs  skeleton.rs  texture.rs
sm4sh_wgpu/src/shader/: bloom_add.wgsl  bloom_blur.wgsl  bloom_blur_combine.wgsl  bloom_bright.wgsl  bone.wgsl  model.wgsl  variance_shadow.wgsl
sm4sh_wgpu_batch/: Cargo.toml
sm4sh_wgpu_batch/src/: main.rs
