[workspace]
members = ["sm4sh_lib", "sm4sh_model", "sm4sh_shader", "sm4sh_test", "sm4sh_viewer", "sm4sh_wgpu", "sm4sh_wgpu_batch"]
resolver = "2"

[workspace.dependencies]
bilge = "0.2.0"
binrw = "0.15.0"
half = "2.4.1"
clap = {version = "4.5.28", features = ["derive"] }
rayon = "1.10.0"
wgpu = "25.0.2"
glam = "0.30.4"
log = "0.4.22"
simple_logger = "5.0.0"
image_dds = { version = "0.7.2", default-features = false }
approx = "0.5.1"
ordered-float = "5.0.0"
