[package]
name = "sm4sh_lib"
version = "0.1.0"
edition = "2024"

[dependencies]
binrw.workspace = true
bilge.workspace = true
half.workspace = true
wiiu_swizzle = "0.3.0"
xc3_write = { git = "https://github.com/ScanMountGoat/xc3_lib", rev = "13626dc" }
image_dds = { workspace = true, default-features = false, features = ["ddsfile"] }
bitflags = "2.9.1"
arbitrary = { workspace = true, features = ["derive"], optional = true }

[dev-dependencies]
hexlit = "0.5.5"
