[package]
name = "sm4sh_lib"
version = "0.1.0"
edition = "2024"

[dependencies]
binrw.workspace = true
bilge.workspace = true
half.workspace = true
wiiu_swizzle = { git = "https://github.com/ScanMountGoat/wiiu_swizzle", rev = "32eb8f1" }
xc3_write = { git = "https://github.com/ScanMountGoat/xc3_lib", rev = "13626dc" }
image_dds = { workspace = true, default-features = false, features = ["ddsfile"] }
bitflags = "2.9.1"
arbitrary = { workspace = true, features = ["derive"], optional = true }
thiserror.workspace = true

[dev-dependencies]
hexlit = "0.5.5"
