[package]
name = "sm4sh_model"
version = "0.1.0"
edition = "2021"

[dependencies]
sm4sh_lib = { path = "../sm4sh_lib" }
binrw.workspace = true
bilge.workspace = true
half.workspace = true
image_dds = { workspace = true, default-features = false, features = ["ddsfile"] }
glam.workspace = true
approx.workspace = true
log.workspace = true
ordered-float = { workspace = true, features = ["serde"] }
serde.workspace = true
serde_json.workspace = true
indexmap = { workspace = true, features = ["serde"] }
smol_str = { workspace = true, features = ["serde"] }
xc3_shader = { git = "https://github.com/ScanMountGoat/xc3_lib", rev = "69496a0", default-features = false, features = ["serde"] }

[dev-dependencies]
hexlit = "0.5.5"