[package]
name = "sm4sh_model"
version = "0.1.0"
edition = "2024"

[dependencies]
sm4sh_lib = { path = "../sm4sh_lib" }
binrw.workspace = true
bilge.workspace = true
half.workspace = true
image_dds = { workspace = true, default-features = false, features = ["ddsfile"] }
glam.workspace = true
approx.workspace = true
log.workspace = true
ordered-float.workspace = true
indexmap.workspace = true
smol_str.workspace = true
xc3_shader = { workspace = true, default-features = false }
varint-rs = "2.2.0"
ahash = "0.8.12"
strum = { version = "0.26.3", features = ["derive"] }
case.workspace = true

[dev-dependencies]
hexlit = "0.5.5"