[package]
name = "sm4sh_model"
version = "0.1.0"
edition = "2024"

[dependencies]
sm4sh_lib = { path = "../sm4sh_lib" }
binrw.workspace = true
bilge.workspace = true
half.workspace = true
image_dds = { workspace = true, default-features = false, features = ["ddsfile"] }
glam.workspace = true
approx.workspace = true
log.workspace = true
ordered-float.workspace = true
indexmap.workspace = true
smol_str.workspace = true
xc3_shader = { workspace = true, default-features = false }
varint-rs = "2.2.0"
ahash.workspace = true
strum = { version = "0.27.2", features = ["derive"] }
case.workspace = true
zune-inflate = "0.2.54"
arbitrary = { workspace = true, features = ["derive"], optional = true }

[dev-dependencies]
hexlit = "0.5.5"

[features]
arbitrary = ["dep:arbitrary", "sm4sh_lib/arbitrary", "indexmap/arbitrary", "ordered-float/arbitrary", "glam/arbitrary", "half/arbitrary"]
