[package]
name = "sm4sh_shader"
version = "0.1.0"
edition = "2024"

[dependencies]
sm4sh_lib = { path = "../sm4sh_lib" }
sm4sh_model = { path = "../sm4sh_model" }
nom = "8.0.0"
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
globwalk.workspace = true
rayon.workspace = true
xc3_shader = { git = "https://github.com/ScanMountGoat/xc3_lib", rev = "f2789db", default-features = false }
