[package]
name = "sm4sh_wgpu"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = { version = "1.21.0", features = ["derive"] }
encase = "0.12.0"
sm4sh_model = { path = "../sm4sh_model" }
wgpu.workspace = true
glam = { workspace = true, features = ["bytemuck", "encase"] }
ordered-float.workspace = true
log.workspace = true
smol_str.workspace = true
indoc.workspace = true
indexmap.workspace = true
case.workspace = true

[build-dependencies]
wgsl_to_wgpu = "0.16.0"
