[package]
name = "sm4sh_wgpu_batch"
version = "0.1.0"
edition = "2024"

[dependencies]
sm4sh_wgpu = { path = "../sm4sh_wgpu" }
sm4sh_lib = { path = "../sm4sh_lib" }
sm4sh_model = { path = "../sm4sh_model" }
futures = "0.3"
wgpu.workspace = true
log.workspace = true
simple_logger.workspace = true
globwalk.workspace = true
image = "0.25.1"
futures-intrusive = "0.5.0"
glam.workspace = true
rayon.workspace = true
anyhow.workspace = true
clap.workspace = true
